--- a/cluster/apps/home/frigate/helm-release.yaml
+++ b/cluster/apps/home/frigate/helm-release.yaml
@@ -31,6 +31,8 @@ spec:
           traefik.ingress.kubernetes.io/router.middlewares: "network-external-auth@kubernetescrd"
           external-dns/is-public: "true"
           external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+          hajimari.io/enable: "true"
+          hajimari.io/icon: "cctv"
         hosts:
           - host: "frigate.${SECRET_DOMAIN}"
             paths:
