--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -28,6 +28,7 @@ stringData:
   HASS_SECRET_SP_KEY: ENC[AES256_GCM,data:9DlMXcU2vUfuYAwiQhaM85+AaFk2e+wPgQHsASYg8IN8/brB,iv:iZXG51tyUTWa7l84JETu3jK+3uiAQSrQzvMooRTd2H8=,tag:ujdgEWHJEDUDSnUP6Sz1vQ==,type:str]
   HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:zUfT8oA=,iv:/6T5F+b1+mgORPHo7bJE4VFCO61mB7fgjyNBHaadLjA=,tag:8VPtiOXbySm8AC8NUU3+eg==,type:str]
   HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:AQ4n7zzX/XGTHgR3,iv:6oEeJz6+7WyNj+2+nLPeIRfztt9fvZlYKV66tt547eI=,tag:44R9I0K7PfWI0Dd+nfZ5UA==,type:str]
+  HASS_AMCREST_FRONTDOOR_RTSP_STREAM: ENC[AES256_GCM,data:M2Wn+ksVQcQoQo9O+SSZHXnGk/bGoIj6vN7p8SILkLWtE4mE4x4JjtrmqHZnxsKvYhgwMaopt2xmKiAERhgSilNdS+DnHNEE9yGoNJ9Tu39tbNgy5afH89rXCA==,iv:pbfW+vaWZjlwaCcXRYvpa2etAT1Z+CWkgFN/xvZUzM8=,tag:kBc02zOJPA1FrMNeXKBO+g==,type:str]
   HASS_MQTT_MOSQUITTO_PASSWORD: ENC[AES256_GCM,data:Cc7W1C/D9q/3uzVqD58H+YO+t74v0+CK,iv:cShGNLqerf/xZVMDQEZvIHZ7PYU8eBVlBJTAbsrUKbs=,tag:6A2JwRYcEHLozL0MQD34aw==,type:str]
   HASS_SECRET_NONA_LONGITUDE: ENC[AES256_GCM,data:vslVwCykuyKelA==,iv:ncqOZjRl4VMF8e3ea1SPfOv1QDO7qW4jHxcEART+jZY=,tag:mI7P8RTLntRQn2ugG6BCaA==,type:str]
   HASS_SECRET_NONA_LATITUDE: ENC[AES256_GCM,data:osJP1Jy8J/q8,iv:BuqNQjgkgDpSy8R3K288pJZ3UDZDt462RandXYGDty8=,tag:i+FzL9dz3rLvnJlJImF3/Q==,type:str]
@@ -39,8 +40,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-01T13:41:08Z"
-  mac: ENC[AES256_GCM,data:hl3ldXIRF6xoIw5Lez/3zhgTyNafzuWuJKDhTZ5U90vAjtiZtOut2BnA2jEfmEc6tuu7qn25lDHPLjU/i7vkCoFKOGpX0t8OMd6gi5ZctbigfjyzaP9/Qrewj35crCCXWIjXkLxwuO3jCVmO5DnpwfN3D7w6N0s1sFTDotfV2W4=,iv:n1CKYRzPIYD55bAXJyyLXgkz2T3UMXapjl0dUb8M9vY=,tag:4gVEs0ECX0/SOk2LXp1HBw==,type:str]
+  lastmodified: "2021-10-05T12:52:39Z"
+  mac: ENC[AES256_GCM,data:qBo3tWkH8lVbZWb5hx8p+sYBJ936VcV7vJ3aLouaRTSRShJLxCtVpdllMe2RmitsJSzP2j+x14AnOWPjVX6t2G9KMr0GHWoGryrokMdqmZllcORtSsf7IJVBibEOqwLHM8y17uhQSKg3huxIWUZYe2KRqQIGAAYGoN9RxecazcQ=,iv:vIl+z+zXVkAwQbQeoqu2RLEgKeccGnIiKUPCYIVK2H4=,tag:Lz4lya2ew/G3jEeE3saYBw==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
