add hikvision stream secret

--- a/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
+++ b/cluster/apps/home/home-assistant/home-assistant-secrets.enc.yaml
@@ -29,6 +29,7 @@ stringData:
   HASS_AMCREST_USERNAME: ENC[AES256_GCM,data:zUfT8oA=,iv:/6T5F+b1+mgORPHo7bJE4VFCO61mB7fgjyNBHaadLjA=,tag:8VPtiOXbySm8AC8NUU3+eg==,type:str]
   HASS_AMCREST_PASSWORD: ENC[AES256_GCM,data:AQ4n7zzX/XGTHgR3,iv:6oEeJz6+7WyNj+2+nLPeIRfztt9fvZlYKV66tt547eI=,tag:44R9I0K7PfWI0Dd+nfZ5UA==,type:str]
   HASS_AMCREST_FRONTDOOR_RTSP_STREAM: ENC[AES256_GCM,data:M2Wn+ksVQcQoQo9O+SSZHXnGk/bGoIj6vN7p8SILkLWtE4mE4x4JjtrmqHZnxsKvYhgwMaopt2xmKiAERhgSilNdS+DnHNEE9yGoNJ9Tu39tbNgy5afH89rXCA==,iv:pbfW+vaWZjlwaCcXRYvpa2etAT1Z+CWkgFN/xvZUzM8=,tag:kBc02zOJPA1FrMNeXKBO+g==,type:str]
+  HASS_HIKVISION_PATIO_RTSP_STREAM: ENC[AES256_GCM,data:Fuc8od86eoBkz8bSAtIVFFSO1wwT0uAv9mMFA6kL+bUsnp3SuoQ4mYeRXiHx7mRdIWTeupekGx+L5hkXoFU1a5wY,iv:AqQdevMkVWZmTkB7qcCK5+Eidsl9/CQC9zIkRxUtSgY=,tag:/tvSiMntL69yFsF/KQteAQ==,type:str]
   HASS_MQTT_MOSQUITTO_PASSWORD: ENC[AES256_GCM,data:Cc7W1C/D9q/3uzVqD58H+YO+t74v0+CK,iv:cShGNLqerf/xZVMDQEZvIHZ7PYU8eBVlBJTAbsrUKbs=,tag:6A2JwRYcEHLozL0MQD34aw==,type:str]
   HASS_SECRET_NONA_LONGITUDE: ENC[AES256_GCM,data:vslVwCykuyKelA==,iv:ncqOZjRl4VMF8e3ea1SPfOv1QDO7qW4jHxcEART+jZY=,tag:mI7P8RTLntRQn2ugG6BCaA==,type:str]
   HASS_SECRET_NONA_LATITUDE: ENC[AES256_GCM,data:osJP1Jy8J/q8,iv:BuqNQjgkgDpSy8R3K288pJZ3UDZDt462RandXYGDty8=,tag:i+FzL9dz3rLvnJlJImF3/Q==,type:str]
@@ -40,8 +41,8 @@ sops:
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-05T12:52:39Z"
-  mac: ENC[AES256_GCM,data:qBo3tWkH8lVbZWb5hx8p+sYBJ936VcV7vJ3aLouaRTSRShJLxCtVpdllMe2RmitsJSzP2j+x14AnOWPjVX6t2G9KMr0GHWoGryrokMdqmZllcORtSsf7IJVBibEOqwLHM8y17uhQSKg3huxIWUZYe2KRqQIGAAYGoN9RxecazcQ=,iv:vIl+z+zXVkAwQbQeoqu2RLEgKeccGnIiKUPCYIVK2H4=,tag:Lz4lya2ew/G3jEeE3saYBw==,type:str]
+  lastmodified: "2021-10-05T13:25:25Z"
+  mac: ENC[AES256_GCM,data:5OXjYlYW/VnJHaXpv1ohFjN26IIeRI1BxhH/xHLbwG7VvcW/Wvh9ocApVzIqR2FO1MOqz3/4NQCbYUqQsmH7fR69rkYbxwbXiY5JWscehBV+u8N9GI2uLCgmH+1SWqvXzGaBSiTqtxWnJtkr8Csl8MBY80D8/lYlwPz85gdjze0=,iv:5b1w4ysw8rm1goNYiHNmGD8lYceFlS5eGTUYFMQkoas=,tag:/o9nTefxcau6kIVhki0wsw==,type:str]
   pgp:
     - created_at: "2021-06-03T18:15:35Z"
       enc: |
