--- a/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
+++ b/cluster/apps/security/dex-k8s-authenticator/helm-release.yaml
@@ -42,7 +42,24 @@ spec:
     #     cpu: 25m
     #   limits:
     #     memory: 500Mi
-  valuesFrom:
-    - kind: Secret
-      name: "dex-k8s-authenticator-helm-values"
-      optional: false
+    dexK8sAuthenticator:
+      clusters:
+      - name: k8s
+        short_description: "Home k8s cluster"
+        description: "My home k8s cluster"
+        client_secret: ${SECRET_DEX_K8S_AUTHENTICATOR_CLIENT_SECRET}
+        issuer: https://dex.${SECRET_DOMAIN}
+        k8s_master_uri: https://k8s.${SECRET_DOMAIN}:6443
+        client_id: dex-k8s-authenticator
+        redirect_uri: https://login.${SECRET_DOMAIN}/callback/
+        k8s_ca_pem: |
+          -----BEGIN CERTIFICATE-----
+          MIIBdzCCAR2gAwIBAgIBADAKBggqhkjOPQQDAjAjMSEwHwYDVQQDDBhrM3Mtc2Vy
+          dmVyLWNhQDE2Mjg4ODkxNzkwHhcNMjEwODEzMjExMjU5WhcNMzEwODExMjExMjU5
+          WjAjMSEwHwYDVQQDDBhrM3Mtc2VydmVyLWNhQDE2Mjg4ODkxNzkwWTATBgcqhkjO
+          PQIBBggqhkjOPQMBBwNCAATinmCjTXE3W0v1z44dQbIx+qT9Cb5WLb4bO7Ed774r
+          oHUC4qA6WK8PuabTGXl9tMy2qEC0ryOETQwHQS5hk13jo0IwQDAOBgNVHQ8BAf8E
+          BAMCAqQwDwYDVR0TAQH/BAUwAwEB/zAdBgNVHQ4EFgQUavhHhJo+MjWvt20y+6J8
+          26Vz4WswCgYIKoZIzj0EAwIDSAAwRQIgK377GT8P8C1NOOeosUxrxodpP6H23riv
+          F3b6uyly8pYCIQD3QD7XUXQ3UgNHdX3hRbdndTnLKKxuP6hVjgfK8/Egpg==
+          -----END CERTIFICATE-----
