--- a/cluster/core/rook-ceph/storage/ceph-object-store.yaml
+++ b/cluster/core/rook-ceph/storage/ceph-object-store.yaml
@@ -16,7 +16,7 @@ spec:
       codingChunks: 1
   preservePoolsOnDelete: true
   gateway:
-    type: s3
+    #type: s3
     sslCertificateRef:
     port: 80
     #securePort: 443
