bucket isn't actually used

--- a/cluster/core/rook-ceph/storage/kustomization.yaml
+++ b/cluster/core/rook-ceph/storage/kustomization.yaml
@@ -10,6 +10,6 @@ resources:
   - ceph-volume-snapshot-class.yaml
   - ceph-object-store.yaml
   - ceph-bucket-storage-class.yaml
-  - ceph-object-bucket.yaml
+  # - ceph-object-bucket.yaml
   - loki-ceph-object-bucket.yaml
   - thanos-ceph-object-bucket.yaml
