--- a/cluster/base/flux-system/charts/git/invidious-charts-git.yaml
+++ b/cluster/base/flux-system/charts/git/invidious-charts-git.yaml
@@ -7,8 +7,8 @@ metadata:
 spec:
   interval: 10m
   url: https://github.com/iv-org/invidious
-  # ref:
-  #   tag: master
+  ref:
+    branch: master
   ignore: |
     # exclude all
     /*
