--- a/cluster/apps/media/invidious/helm-release.yaml
+++ b/cluster/apps/media/invidious/helm-release.yaml
@@ -9,7 +9,7 @@ spec:
   interval: 5m
   chart:
     spec:
-      chart: ./kubernetes
+      chart: ./kubernetes/
       version: 1.1.0
       sourceRef:
         kind: GitRepository
