--- a/cluster/apps/media/invidious/helm-release.yaml
+++ b/cluster/apps/media/invidious/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: gaps
+  name: invidious
   namespace: media
 spec:
   releaseName: gaps
@@ -17,28 +17,28 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    image:
-      repository: housewrecker/gaps
-      tag: latest
+    # image:
+    #   repository: housewrecker/gaps
+    #   tag: latest
     env:
       TZ: "America/New_York"
-    ingress:
-      main:
-        enabled: true
-        ingressClassName: "traefik"
-        annotations:
-          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-          traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
-        hosts:
-        - host: "gaps.${SECRET_DOMAIN}"
-          paths:
-          - path: /
-            pathType: Prefix
-        tls:
-        - hosts:
-          - "gaps.${SECRET_DOMAIN}"
-          secretName: gaps-cert
-    persistence:
-      data:
-        enabled: true
-        existingClaim: gaps-pvc
+    # ingress:
+    #   main:
+    #     enabled: true
+    #     ingressClassName: "traefik"
+    #     annotations:
+    #       traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+    #       traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
+    #     hosts:
+    #     - host: "gaps.${SECRET_DOMAIN}"
+    #       paths:
+    #       - path: /
+    #         pathType: Prefix
+    #     tls:
+    #     - hosts:
+    #       - "gaps.${SECRET_DOMAIN}"
+    #       secretName: gaps-cert
+    # persistence:
+    #   data:
+    #     enabled: true
+    #     existingClaim: gaps-pvc
