--- a/cluster/apps/media/invidious/helm-release.yaml
+++ b/cluster/apps/media/invidious/helm-release.yaml
@@ -5,11 +5,11 @@ metadata:
   name: invidious
   namespace: media
 spec:
-  releaseName: gaps
+  releaseName: invidious
   interval: 5m
   chart:
     spec:
-      chart: ./kubernetes/
+      chart: /kubernetes
       version: 1.1.0
       sourceRef:
         kind: GitRepository
@@ -17,28 +17,7 @@ spec:
         namespace: flux-system
       interval: 5m
   values:
-    # image:
-    #   repository: housewrecker/gaps
-    #   tag: latest
-    env:
-      TZ: "America/New_York"
-    # ingress:
-    #   main:
-    #     enabled: true
-    #     ingressClassName: "traefik"
-    #     annotations:
-    #       traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
-    #       traefik.ingress.kubernetes.io/router.middlewares: "network-internal-auth@kubernetescrd"
-    #     hosts:
-    #     - host: "gaps.${SECRET_DOMAIN}"
-    #       paths:
-    #       - path: /
-    #         pathType: Prefix
-    #     tls:
-    #     - hosts:
-    #       - "gaps.${SECRET_DOMAIN}"
-    #       secretName: gaps-cert
-    # persistence:
-    #   data:
-    #     enabled: true
-    #     existingClaim: gaps-pvc
+    image:
+      repository: quay.io/invidious/invidious
+      tag: latest
+      pullPolicy: Always
