force definition as string

--- a/cluster/apps/media/invidious/secret-invidious-config.yaml
+++ b/cluster/apps/media/invidious/secret-invidious-config.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: invidious-config
   namespace: media
-data:
+stringData:
   INVIDIOUS_CONFIG: |
     channel_threads: 1
     db:
