--- a/charts/kah-common/Chart.yaml
+++ b/charts/kah-common/Chart.yaml
@@ -10,3 +10,7 @@ dependencies:
   - name: common
     repository: https://library-charts.k8s-at-home.com
     version: 4.0.1
+  - name: postgresql
+    version: 10.12.4
+    repository: https://charts.bitnami.com/bitnami
+    condition: postgresql.enabled
