add domain definition

--- a/cluster/apps/media/invidious/secret-invidious-config.yaml
+++ b/cluster/apps/media/invidious/secret-invidious-config.yaml
@@ -12,7 +12,7 @@ stringData:
       password: kemal
       port: 5432
       user: kemal
-    domain: null
+    domain: iv.${SECRET_DOMAIN}
     feed_threads: 1
     full_refresh: false
     https_only: false
