see if we can force the key?

--- a/cluster/apps/media/invidious/helm-release.yaml
+++ b/cluster/apps/media/invidious/helm-release.yaml
@@ -25,7 +25,7 @@ spec:
     envFrom:
       - secretRef:
           name: invidious-config
-
+          key: INVIDIOUS_CONFIG
     service:
       main:
         ports:
