update to use a configMap

--- a/cluster/apps/media/invidious/helm-release.yaml
+++ b/cluster/apps/media/invidious/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
       pullPolicy: Always
 
     envFrom:
-      - secretRef:
+      - configMapKeyRef:
           name: invidious-config
           key: INVIDIOUS_CONFIG
     service:
