--- a/cluster/apps/media/invidious/helm-release.yaml
+++ b/cluster/apps/media/invidious/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
       pullPolicy: Always
 
     env:
-      - name: INVIDIOUS_CONFIG
+      INVIDIOUS_CONFIG:
         valueFrom:
           configMapKeyRef:
             key: INVIDIOUS_CONFIG
