--- a/cluster/apps/media/invidious/helm-release.yaml
+++ b/cluster/apps/media/invidious/helm-release.yaml
@@ -47,7 +47,7 @@ spec:
       allowPrivilegeEscalation: false
       runAsUser: 1000
       runAsGroup: 1000
-      fsGroup: 1000
+      # fsGroup: 1000
 
     postgresql:
       enabled: true
