--- a/cluster/apps/network/adguard/helm-release.yaml
+++ b/cluster/apps/network/adguard/helm-release.yaml
@@ -43,26 +43,29 @@ spec:
       repository: adguard/adguardhome
       tag: v0.106.3
       pullPolicy: Always
+    controller:
+      replicas: 2
     persistence:
       config:
         enabled: true
-      data:
-        enabled: true
-        existingClaim: database-adguard-home
+      # data:
+      #   enabled: true
+      #   existingClaim: database-adguard-home
+
     env:
       TZ: "America/New_York"
-      PUID: "1000"
-      PGID: "1000"
+
     service:
       main:
         port:
           port: 3000
+
       dns-tcp:
         enabled: true
-        type: LoadBalancer
-        externalIPs:
-        - "${SVC_ADGUARD_ADDRESS}"
-        externalTrafficPolicy: Local
+        type: ClusterIP
+        # externalIPs:
+        # - "${SVC_ADGUARD_ADDRESS}"
+        # externalTrafficPolicy: Local
         port:
           port: 53
           name: dns-tcp
@@ -72,10 +75,10 @@ spec:
       dns-udp:
         enabled: true
         nameSuffix: dns-udp
-        type: LoadBalancer
-        externalIPs:
-        - "${SVC_ADGUARD_ADDRESS}"
-        externalTrafficPolicy: Local
+        type: ClusterIP
+        # externalIPs:
+        # - "${SVC_ADGUARD_ADDRESS}"
+        # externalTrafficPolicy: Local
         port:
           port: 53
           name: dns-udp
@@ -90,7 +93,6 @@ spec:
         #   kubernetes.io/ingress.class: "nginx"
         #   # nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
         hosts:
-        # - host: "dns01.network.${SECRET_DOMAIN}"
         - host: "adguard.${SECRET_DOMAIN}"
           paths:
           - path: /
@@ -98,9 +100,9 @@ spec:
         tls:
         - hosts:
           - "adguard.${SECRET_DOMAIN}"
-          # - "dns01.network.${SECRET_DOMAIN}"
-    nodeSelector:
-      node-role.kubernetes.io/worker: "true"
+
+    # nodeSelector:
+    #   node-role.kubernetes.io/worker: "true"
     resources:
       requests:
         memory: 1000Mi
