--- a/cluster/apps/network/adguard/helm-release.yaml
+++ b/cluster/apps/network/adguard/helm-release.yaml
@@ -44,6 +44,7 @@ spec:
       tag: v0.106.3
       pullPolicy: Always
     controller:
+      type: statefulset
       replicas: 2
     persistence:
       config:
