give it the command and args to run

--- a/cluster/apps/network/adguard/config-sync.yaml
+++ b/cluster/apps/network/adguard/config-sync.yaml
@@ -13,8 +13,8 @@ spec:
           containers:
             - name: adguard-sync-to-secondary
               image: quay.io/bakito/adguardhome-sync
-              # command: ["run"]
-
+              command: ["/opt/go/adguardhome-sync"]
+              args: ["run"]
               env:
                 - name: ORIGIN_URL
                   value: http://adguard-home-0:3000
