can I force this to not run?

--- a/cluster/apps/network/adguard/config-sync.yaml
+++ b/cluster/apps/network/adguard/config-sync.yaml
@@ -29,5 +29,5 @@ spec:
                 # - name: REPLICA_PASSWORD
                 #   value:
                 - name: RUNONSTART
-                  value: "true"
+                  value: "false"
           restartPolicy: Never
