--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -13,7 +13,7 @@ data:
   #SVC_VERNEMQ_ADDRESS: "10.45.10.11"
   SVC_MOSQUITTO_ADDRESS: "10.45.10.11"
   SVC_GITEA_ADDRESS: "10.45.10.12"
-  #SVC_ADGUARD_ADDRESS: "10.45.10.13"
+  SVC_ADGUARD_ADDRESS: "10.45.10.13"
   SVC_BLOCKY_ADDRESS: "10.45.10.13"
   SVC_INFLUXDB_ADDRESS: "10.45.10.15"
   SVC_LOKI_ADDRESS: "10.45.10.16"
