--- a/cluster/apps/network/kustomization.yaml
+++ b/cluster/apps/network/kustomization.yaml
@@ -3,7 +3,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
   - adguard
-  - blocky
+  # - blocky
   - certificates
   - cloudflare-ddns
   - echo-server
