fix service type

--- a/cluster/apps/network/adguard/helm-release.yaml
+++ b/cluster/apps/network/adguard/helm-release.yaml
@@ -62,7 +62,7 @@ spec:
 
       dns-tcp:
         enabled: true
-        type: LoadBalancerIP
+        type: LoadBalancer
         externalIPs:
         - "${SVC_ADGUARD_ADDRESS}"
         externalTrafficPolicy: Local
@@ -75,7 +75,7 @@ spec:
       dns-udp:
         enabled: true
         nameSuffix: dns-udp
-        type: LoadBalancerIP
+        type: LoadBalancer
         externalIPs:
         - "${SVC_ADGUARD_ADDRESS}"
         externalTrafficPolicy: Local
