--- a/cluster/base/cluster-settings.yaml
+++ b/cluster/base/cluster-settings.yaml
@@ -21,6 +21,7 @@ data:
   SVC_COREDNS_ADDRESS_EXTERNAL: "10.45.10.53"
   SVC_COREDNS_ADDRESS_INTERNAL: "10.43.10.53"
   SVC_PLEX_ADDRESS: "10.45.100.100"
+  SVC_OMADA_ADDRESS: "10.45.10.20"
   SVC_QBITTORRENT_ADDRESS: "10.45.10.19"
   NETWORK_K8S_CLUSTER_CIDR: "10.42.0.0/16"
   NETWORK_K8S_SERVICE_CIDR: "10.43.0.0/16"
