--- a/cluster/apps/network/omada/helm-release.yaml
+++ b/cluster/apps/network/omada/helm-release.yaml
@@ -2,7 +2,7 @@
 apiVersion: helm.toolkit.fluxcd.io/v2beta1
 kind: HelmRelease
 metadata:
-  name: omada
+  name: omada-controller
   namespace: network
 spec:
   interval: 5m
