--- a/cluster/apps/network/omada/helm-release.yaml
+++ b/cluster/apps/network/omada/helm-release.yaml
@@ -30,6 +30,26 @@ spec:
       SHOW_SERVER_LOGS: true
       SHOW_MONGODB_LOGS: true
 
+    ingress:
+      main:
+        enabled: true
+        ingressClassName: "traefik"
+        annotations:
+          kubernetes.io/tls-acme: "true"
+          cert-manager.io/cluster-issuer: letsencrypt-production
+          traefik.ingress.kubernetes.io/router.entrypoints: "websecure"
+          external-dns/is-public: "true"
+          external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
+        hosts:
+          - host: "omada.${SECRET_DOMAIN}"
+            paths:
+              - path: /
+                pathType: Prefix
+        tls:
+          - hosts:
+              - "omada.${SECRET_DOMAIN}"
+            secretName: omada-cert
+
     service:
       controller:
         enabled: true
