add cert mounting

--- a/cluster/apps/network/omada/helm-release.yaml
+++ b/cluster/apps/network/omada/helm-release.yaml
@@ -133,6 +133,13 @@ spec:
         enabled: true
         mountPath: /opt/tplink/EAPController/logs
         existingClaim: omada-logs-pvc
+      cert:
+        enabled: true
+        mountPath: /cert
+        type: custom
+        volumeSpec:
+          secret:
+            secretName: omada-cert
 
     nodeSelector:
       node-role.kubernetes.io/worker: "true"
