--- a/cluster/base/flux-system/charts/helm/kustomization.yaml
+++ b/cluster/base/flux-system/charts/helm/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - banzaicloud-charts.yaml
   - bitnami-charts.yaml
   - bitwardenrs-charts.yaml
+  - charlie-haley-charts.yaml
   - codecentric-charts.yaml
   - coredns-charts.yaml
   - dacruz21-charts.yaml
