add short name for omada-controller dns

--- a/cluster/apps/network/omada/helm-release.yaml
+++ b/cluster/apps/network/omada/helm-release.yaml
@@ -49,6 +49,7 @@ spec:
         tls:
           - hosts:
               - "omada.${SECRET_DOMAIN}"
+              - "omada-controller"
             secretName: omada-cert
 
     service:
