try case sensitivity

--- a/cluster/apps/network/traefik/helm-release.yaml
+++ b/cluster/apps/network/traefik/helm-release.yaml
@@ -48,7 +48,7 @@ spec:
       dashboard:
         enabled: false
     globalArguments:
-      - "--serverstransport.insecureskipverify=true"
+      - "--serversTransport.insecureSkipVerify=true"
       - "--providers.kubernetesingress.ingressclass=traefik"
       - "--metrics.prometheus=true"
       - "--metrics.prometheus.entryPoint=metrics"
