--- a/cluster/apps/network/omada/kustomization.yaml
+++ b/cluster/apps/network/omada/kustomization.yaml
@@ -1,6 +1,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - middleware.yaml
   - data-pvc.yaml
   - logs-pvc.yaml
   - work-pvc.yaml
