--- a/cluster/apps/network/omada/helm-release.yaml
+++ b/cluster/apps/network/omada/helm-release.yaml
@@ -53,11 +53,11 @@ spec:
             secretName: omada-cert
 
     service:
-      # main:
-      #   enabled: true
-      #   ports:
-      #     http:
-      #       port: 8088
+      main:
+        enabled: true
+        ports:
+          https:
+            port: 8043
       controller:
         enabled: true
         type: LoadBalancer
