--- a/cluster/apps/network/omada/kustomization.yaml
+++ b/cluster/apps/network/omada/kustomization.yaml
@@ -1,7 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - middleware.yaml
+  - middleware-headers.yaml
+  - middleware-redirect.yaml
   - data-pvc.yaml
   - logs-pvc.yaml
   - work-pvc.yaml
