--- a/cluster/core/namespaces/kustomization.yaml
+++ b/cluster/core/namespaces/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - calico-system.yaml
   - cert-manager.yaml
   - collab.yaml
+  - comms.yaml
   - default.yaml
   - ext-gateway.yaml
   - flux-system.yaml
