add secrets for matrix

--- a/cluster/base/cluster-secrets.yaml
+++ b/cluster/base/cluster-secrets.yaml
@@ -79,14 +79,16 @@ stringData:
   SECRET_RXRESUME_FIREBASE_MESSAGING_SENDER_ID: ENC[AES256_GCM,data:dLTep4u0N2teWiqC,iv:mA/09KhB/x6dhYcOYtqbVzTESaXmZ5/81fM0H+cG1Pc=,tag:Ie+5veVMD84PruoifL2eAw==,type:str]
   SECRET_RXRESUME_FIREBASE_APP_ID: ENC[AES256_GCM,data:dNKBwvMcgHtV45vet9oVBX6QknOQx8wd3FlzgsmH+Sm4Ogv9lsVvCWg=,iv:YSpMVETdjYQ6uq+Lrzol7b3Bx5TOINqMmO61EbYU0zg=,tag:hF/OAvFapAQBwzp4FLxZww==,type:str]
   SECRET_CLOUDFLARE_DYNDNS_TOKEN: ENC[AES256_GCM,data:Jc2yTzlwVf6Gs6UAaE8Ff+M8Bixid9f4QItMXQOfvoQlCAPRq6cmDg==,iv:xIruwFjCbJqXPJHHSSzyVHSfE9LqtqsPOB2P9m6iVXY=,tag:IcTCTVTz7h+JW9oI/2y7CA==,type:str]
+  SECRET_MATRIX_POSTGRESQL_PASSWORD: ENC[AES256_GCM,data:Lazo+CiDTjStdd4/QlI7bAf5tw7oG8BpIB1O4eOkvr1kRLrrVaBqzLwAfEzQat78,iv:UDDFGwgZTrVtwjVaO07Bg3rT5P6Lo9Uxa/TIdhOAnuk=,tag:yZRNHxVfv4ynngxErJknow==,type:str]
+  SECRET_MATRIX_REDIS_PASSWORD: ENC[AES256_GCM,data:qNxwNEIV9VPbQcLA59flJle9Ix35dzPIvzQy7P1cIMniafIoLk3mqJnLXun/60V+,iv:dnJQC2CnL+J4Pq44U0xObGblI7EWC1PUJ7YqrQLa5gg=,tag:QjjtdTRtgixfJQyl6sntIg==,type:str]
 sops:
   kms: []
   gcp_kms: []
   azure_kv: []
   hc_vault: []
   age: []
-  lastmodified: "2021-10-04T13:17:09Z"
-  mac: ENC[AES256_GCM,data:f6NKvtvrIy1knjF6PZiw8/0m3iSQT8YIKEn4NW9VtX+HWj2NlpW9iaE0DR+f56SxH+7hmQr37m+RuAMUiTUu5mJgP9gXonKFdnW1LNbCaaANv3VFytGu462TvjdV2ry/fkVxPS58BXgCAfvMJofoJ5zZAkxgXweODu5xLusho0Y=,iv:fgbkuYbRg1V9DlVr0EERFtiKiAE77e8at81sUXJor2Q=,tag:rT7W25VKJdlR+TxpReZ3vA==,type:str]
+  lastmodified: "2021-10-23T00:06:35Z"
+  mac: ENC[AES256_GCM,data:5GOV5rSRgDG4jACmUjw9BIyIH13dSxfndSYnR2uWSTDxwpFc0zMYst9P05CTr2OHvJNGwcHHh/Qqjilw+RsTWTS6EzocY7AmOaMcxWtzxZe/vaI9ngHDUqpvzPyYRPz1q+N9ixZGKldcQsOubp41rvPQvfTq9coG+UHf74jqJbk=,iv:1T45FehRbu+eSZpSriKaB1bM4EXaCi0PyVQQmhmhATY=,tag:mX2t1HXGeBu9T4NRcmlAkA==,type:str]
   pgp:
     - created_at: "2021-06-14T18:11:45Z"
       enc: |
