--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -21,9 +21,9 @@ spec:
       repository: matrixdotorg/synapse
       tag: v1.45.1
     serverName: ${SECRET_PUBLIC_DOMAIN}
-    publicServerName: matrix.${SECRET_PUBLIC_DOMAIN}
+    publicServerName: matrix.${SECRET_DOMAIN}
     wellknown:
-      enabled: true
+      enabled: false
 
     ingress:
       enabled: true
@@ -32,13 +32,11 @@ spec:
       annotations:
         external-dns/is-public: "true"
         external-dns.alpha.kubernetes.io/target: "ipv4.${SECRET_DOMAIN}"
-      wkHosts:
-        - ${SECRET_PUBLIC_DOMAIN}
       tls:
         - secretName: matrix-cert
           hosts:
             - ${SECRET_PUBLIC_DOMAIN}
-            - matrix.${SECRET_PUBLIC_DOMAIN}
+            - matrix.${SECRET_DOMAIN}
 
     postgresql:
       enabled: true
