--- a/cluster/apps/comms/matrix-synapse/kustomization.yaml
+++ b/cluster/apps/comms/matrix-synapse/kustomization.yaml
@@ -4,4 +4,4 @@ kind: Kustomization
 resources:
   - postgresql-data-pvc.yaml
   - matrix-media-pvc.yaml
-  - helm-release.yaml
+  # - helm-release.yaml
