--- a/cluster/apps/comms/matrix-synapse/kustomization.yaml
+++ b/cluster/apps/comms/matrix-synapse/kustomization.yaml
@@ -2,6 +2,7 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+  - signing-key.enc.yaml
   - postgresql-data-pvc.yaml
   - matrix-media-pvc.yaml
   - helm-release.yaml
