disable well-known

--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -23,7 +23,7 @@ spec:
     serverName: ${SECRET_PUBLIC_DOMAIN}
     publicServerName: matrix.${SECRET_DOMAIN}
     wellknown:
-      enabled: true
+      enabled: false
 
     ingress:
       enabled: true
