add sms delegate

--- a/cluster/apps/comms/matrix-synapse/helm-release.yaml
+++ b/cluster/apps/comms/matrix-synapse/helm-release.yaml
@@ -39,6 +39,8 @@ spec:
           pattern: ".*"
         - medium: msisdn
           pattern: '\+1'
+      account_threepid_delegates:
+        msisdn: https://vector.im
 
     ingress:
       enabled: true
