--- a/cluster/apps/network/external-dns/helm-release.yaml
+++ b/cluster/apps/network/external-dns/helm-release.yaml
@@ -26,7 +26,7 @@ spec:
     cloudflare:
       secretName: cloudflare-api-key
       email: "${SECRET_EMAIL}"
-      proxied: false
+      proxied: true
     policy: sync
     txtPrefix: "k8s."
     domainFilters:
