--- a/cluster/apps/comms/mautrix-facebook/kustomization.yaml
+++ b/cluster/apps/comms/mautrix-facebook/kustomization.yaml
@@ -2,5 +2,6 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - mautrix-facebook-data-pvc.yaml
+  - config.yaml
+  # - mautrix-facebook-data-pvc.yaml
   - helm-release.yaml
