--- a/cluster/apps/comms/mautrix-facebook/config.yaml
+++ b/cluster/apps/comms/mautrix-facebook/config.yaml
@@ -73,7 +73,7 @@ stringData:
 
       # Community ID for bridged users (changes registration file) and rooms.
       # Must be created manually. Example: "+facebook:example.com"
-      community_id: null
+      community_id: +facebook:${SECRET_PUBLIC_DOMAIN}
 
       # Whether or not to receive ephemeral events via appservice transactions.
       # Requires MSC2409 support (i.e. Synapse 1.22+).
