stringData not real

--- a/cluster/apps/comms/mautrix-facebook/config.yaml
+++ b/cluster/apps/comms/mautrix-facebook/config.yaml
@@ -3,7 +3,7 @@ kind: ConfigMap
 metadata:
   name: mautrix-facebook-config
   namespace: comms
-stringData:
+data:
   config.yaml: |
     # Homeserver details
     homeserver:
